@@ -301,6 +301,8 @@ public:
     virtual void OSXSetModified(bool modified) { m_modified = modified; }
     virtual bool OSXIsModified() const { return m_modified; }
 
+    virtual void SetRepresentedFilename(const wxString& WXUNUSED(filename)) { }
+
 protected:
     // the frame client to screen translation should take account of the
     // toolbar which may shift the origin of the client area
